// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Functions - Container Input Forms 1`] = `
[
  0.7,
  0,
  0,
  0.28,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Container Input Forms 2`] = `
[
  0.7,
  0,
  0,
  0.35,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Functions - Container Input Forms 3`] = `
[
  0.7,
  0,
  0,
  0.42,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
